End of section 6

--- a/weather-app/package.json
+++ b/weather-app/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "yargs": "^13.2.4"
   },
   "devDependencies": {},
   "scripts": {
